2008-08-04  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (eval-for-emacs): Don't flush streams here as that
	may now block.

	* swank-lispworks.lisp (receive-if): Handle interrupts.

	* slime.el (slime-repl-clear-buffer): Delete stuff after the
	prompt too.
	(slime-with-output-to-temp-buffer): Add read-only argument.
	(slime-temp-buffer): Renamed from slime-get-temp-buffer-create.
	Drop noselect argument.

2008-08-03  Helmut Eller  <heller@common-lisp.net>

	Add some flow-control.

	* swank.lisp (make-output-function): Synchronize with Emacs on
	every 100th chunk of output.
	(wait-for-event,wait-for-event/event-loop,event-match-p): New
	functions.  Used to selectively wait for some events and to queue
	the other events.
	(dispatch-event, read-from-socket-io): Tag non-queueable events
	with :call.
	(read-from-control-thread, read-from-emacs): Process
	:call events only; enqueue the others.

	(*log-output*): Don't use synonym-streams here.  Dereference the
	symbol until we get at the real stream.
	(log-event): Escape non-ascii characters more carefully.

	* swank-backend.lisp (receive-if): New function.
	Update backends accordingly. (not yet for ABCL and SCL)

	* slime.el (slime-dispatch-event): Handle ping event.

2008-08-03  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el: Make code related to temp buffers more consistent.

	(slime-with-output-to-temp-buffer): Docstring update. New keyarg
	:connection to specify whether the current connection should be
	stored buffer-locally. New key arg :emacs-snapshot to explicitly
	pass the snapshot to be stored. The created buffer is not
	automatically set to slime-mode anymore.
	(slime-temp-buffer-mode): Add `C-c C-z', and `M-.' bindings to all
	temp buffers.

	(slime-list-compiler-notes): Use `slime-with-output-to-...',
	rename the buffer from "*compiler notes*" to "*SLIME
	Compiler-Notes*".
	(slime-compiler-notes-mode-map): Remove explicit binding of "q",
	as it's inherited from the temp buffer.